# pytdown

./: .gitignore  LICENSE  README.md  download_video.py  get_video_info.py  main.py  pyproject.toml  utils.py
src/pytdown/: download_video.py  get_video_info.py  main.py  utils.py
