[project]
name = "pytdown"
version = "0.3.4"
description = "Interfaz de línea de comandos para descargar videos de YouTube utilizando yt-dlp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deno>=2.8.2",
    "rich>=15.0.0",
    "yt-dlp[default]>=2026.3.17",
]

[project.scripts]
pytdown = "pytdown.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytdown"]
